# polyakov-claude-skills

./: .gitignore  README.md  genome.md
.claude-plugin/: marketplace.json
.claude/hooks/security-guardian/: README.md  __init__.py  main.py  pyproject.toml  settings.template.json
.claude/hooks/security-guardian/checks/: __init__.py  base.py  bypass_check.py  deletion_check.py  directory_check.py  download_check.py  execution_check.py  git_check.py  secrets_check.py  unpack_check.py
.claude/hooks/security-guardian/config/: __init__.py  schema.py  security_config.yaml
.claude/hooks/security-guardian/handlers/: __init__.py  base.py  bash_handler.py  glob_grep_handler.py  read_handler.py  write_handler.py
.claude/hooks/security-guardian/messages/: __init__.py  guidance.py
.claude/hooks/security-guardian/parsers/: __init__.py  bash_parser.py  path_parser.py
.claude/hooks/security-guardian/tests/: __init__.py  conftest.py  test_bash_parser.py  test_bypass_check.py  test_deletion_check.py  test_directory_check.py  test_download_check.py  test_git_check.py  test_handlers.py  test_secrets_check.py  test_unpack_check.py
docx-contracts/: README.md  SKILL.md  scripts
genome-analizer/: README.md  SKILL.md
plugins/agent-deck/.claude-plugin/: plugin.json
plugins/docx-contracts/.claude-plugin/: plugin.json
scrapedo-web-scraper/: .gitignore  README.md  SKILL.md  scripts
scrapedo-web-scraper/config/: README.md
scrapedo-web-scraper/references/: api_documentation.md  examples.md
scrapedo-web-scraper/scripts/: check_status.py  scrape.py
(+33 files in other folders)
